--- a/STM32F746G_DISCO.ioc
+++ b/STM32F746G_DISCO.ioc
@@ -17,6 +17,18 @@ CORTEX_M7.MPU_Control=MPU_PRIVILEGED_DEFAULT
 CORTEX_M7.PREFETCH_ENABLE=1
 CORTEX_M7.Size-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_REGION_SIZE_256MB
 CORTEX_M7.Size-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_REGION_SIZE_16MB
+Dma.DAC1.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.DAC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.DAC1.0.Instance=DMA1_Stream5
+Dma.DAC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.DAC1.0.MemInc=DMA_MINC_ENABLE
+Dma.DAC1.0.Mode=DMA_CIRCULAR
+Dma.DAC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.DAC1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.DAC1.0.Priority=DMA_PRIORITY_LOW
+Dma.DAC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.Request0=DAC1
+Dma.RequestsNb=1
 FMC.CASLatency1=FMC_SDRAM_CAS_LATENCY_3
 FMC.ExitSelfRefreshDelay1=7
 FMC.IPParameters=CASLatency1,SDClockPeriod1,ReadBurst1,LoadToActiveDelay1,ExitSelfRefreshDelay1,SelfRefreshTime1,RowCycleDelay1,WriteRecoveryTime1,RPDelay1,RCDDelay1
@@ -60,19 +72,20 @@ Mcu.CPN=STM32F746NGH6
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=CRC
-Mcu.IP10=QUADSPI
-Mcu.IP11=RCC
-Mcu.IP12=SYS
-Mcu.IP13=TIM7
+Mcu.IP10=NVIC
+Mcu.IP11=QUADSPI
+Mcu.IP12=RCC
+Mcu.IP13=SYS
+Mcu.IP14=TIM7
 Mcu.IP2=DAC
-Mcu.IP3=DMA2D
-Mcu.IP4=FMC
-Mcu.IP5=FREERTOS
-Mcu.IP6=I2C3
-Mcu.IP7=LIBJPEG
-Mcu.IP8=LTDC
-Mcu.IP9=NVIC
-Mcu.IPNb=14
+Mcu.IP3=DMA
+Mcu.IP4=DMA2D
+Mcu.IP5=FMC
+Mcu.IP6=FREERTOS
+Mcu.IP7=I2C3
+Mcu.IP8=LIBJPEG
+Mcu.IP9=LTDC
+Mcu.IPNb=15
 Mcu.Name=STM32F746NGHx
 Mcu.Package=TFBGA216
 Mcu.Pin0=PE4
@@ -176,6 +189,7 @@ Mcu.UserName=STM32F746NGHx
 MxCube.Version=6.16.1
 MxDb.Version=DB.6.0.161
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.DMA1_Stream5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA2D_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -419,7 +433,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CRC_Init-CRC-false-HAL-true,4-MX_DMA2D_Init-DMA2D-false-HAL-true,5-MX_FMC_Init-FMC-false-HAL-true,6-MX_I2C3_Init-I2C3-false-HAL-true,7-MX_LTDC_Init-LTDC-false-HAL-true,8-MX_QUADSPI_Init-QUADSPI-false-HAL-true,9-MX_LIBJPEG_Init-LIBJPEG-false-HAL-false,10-MX_DAC_Init-DAC-false-HAL-true,11-MX_TIM7_Init-TIM7-false-HAL-true,13-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.26.0-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,14-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.26.0-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_DMA2D_Init-DMA2D-false-HAL-true,6-MX_FMC_Init-FMC-false-HAL-true,7-MX_I2C3_Init-I2C3-false-HAL-true,8-MX_LTDC_Init-LTDC-false-HAL-true,9-MX_QUADSPI_Init-QUADSPI-false-HAL-true,10-MX_LIBJPEG_Init-LIBJPEG-false-HAL-false,11-MX_DAC_Init-DAC-false-HAL-true,12-MX_TIM7_Init-TIM7-false-HAL-true,14-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.26.0-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,15-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.26.0-false-HAL-false
 QUADSPI.ChipSelectHighTime=QSPI_CS_HIGH_TIME_6_CYCLE
 QUADSPI.ClockPrescaler=1
 QUADSPI.FifoThreshold=4
