add debug function

--- a/STM32F746G_DISCO.ioc
+++ b/STM32F746G_DISCO.ioc
@@ -90,98 +90,99 @@ Mcu.Name=STM32F746NGHx
 Mcu.Package=TFBGA216
 Mcu.Pin0=PE4
 Mcu.Pin1=PE2
-Mcu.Pin10=PJ13
-Mcu.Pin11=PD0
-Mcu.Pin12=PK7
-Mcu.Pin13=PK6
-Mcu.Pin14=PK5
-Mcu.Pin15=PG12
-Mcu.Pin16=PJ14
-Mcu.Pin17=PD1
-Mcu.Pin18=PF0
-Mcu.Pin19=PI10
+Mcu.Pin10=PG15
+Mcu.Pin11=PJ13
+Mcu.Pin12=PD0
+Mcu.Pin13=PK7
+Mcu.Pin14=PK6
+Mcu.Pin15=PK5
+Mcu.Pin16=PG12
+Mcu.Pin17=PJ14
+Mcu.Pin18=PD1
+Mcu.Pin19=PF0
 Mcu.Pin2=PE1
-Mcu.Pin20=PK4
-Mcu.Pin21=PK3
-Mcu.Pin22=PJ15
-Mcu.Pin23=PF1
-Mcu.Pin24=PI12
-Mcu.Pin25=PI9
-Mcu.Pin26=PK1
-Mcu.Pin27=PK2
-Mcu.Pin28=PH0/OSC_IN
-Mcu.Pin29=PF2
+Mcu.Pin20=PI10
+Mcu.Pin21=PK4
+Mcu.Pin22=PK3
+Mcu.Pin23=PJ15
+Mcu.Pin24=PF1
+Mcu.Pin25=PI12
+Mcu.Pin26=PI9
+Mcu.Pin27=PK1
+Mcu.Pin28=PK2
+Mcu.Pin29=PH0/OSC_IN
 Mcu.Pin3=PE0
-Mcu.Pin30=PI15
-Mcu.Pin31=PJ11
-Mcu.Pin32=PK0
-Mcu.Pin33=PC7
-Mcu.Pin34=PH1/OSC_OUT
-Mcu.Pin35=PF3
-Mcu.Pin36=PI14
-Mcu.Pin37=PJ8
-Mcu.Pin38=PJ10
-Mcu.Pin39=PG8
+Mcu.Pin30=PF2
+Mcu.Pin31=PI15
+Mcu.Pin32=PJ11
+Mcu.Pin33=PK0
+Mcu.Pin34=PC7
+Mcu.Pin35=PH1/OSC_OUT
+Mcu.Pin36=PF3
+Mcu.Pin37=PI14
+Mcu.Pin38=PJ8
+Mcu.Pin39=PJ10
 Mcu.Pin4=PB8
-Mcu.Pin40=PC6
-Mcu.Pin41=PF4
-Mcu.Pin42=PH5
-Mcu.Pin43=PH3
-Mcu.Pin44=PJ7
-Mcu.Pin45=PJ9
-Mcu.Pin46=PG6
-Mcu.Pin47=PF5
-Mcu.Pin48=PJ6
-Mcu.Pin49=PD15
+Mcu.Pin40=PG8
+Mcu.Pin41=PC6
+Mcu.Pin42=PF4
+Mcu.Pin43=PH5
+Mcu.Pin44=PH3
+Mcu.Pin45=PJ7
+Mcu.Pin46=PJ9
+Mcu.Pin47=PG6
+Mcu.Pin48=PF5
+Mcu.Pin49=PJ6
 Mcu.Pin5=PB4
-Mcu.Pin50=PD10
-Mcu.Pin51=PC3
-Mcu.Pin52=PD14
-Mcu.Pin53=PD9
-Mcu.Pin54=PD8
-Mcu.Pin55=PB2
-Mcu.Pin56=PF12
-Mcu.Pin57=PG1
-Mcu.Pin58=PF15
-Mcu.Pin59=PJ4
-Mcu.Pin6=PA14
-Mcu.Pin60=PD12
-Mcu.Pin61=PD13
-Mcu.Pin62=PJ5
-Mcu.Pin63=PA4
-Mcu.Pin64=PF13
-Mcu.Pin65=PG0
-Mcu.Pin66=PJ3
-Mcu.Pin67=PE8
-Mcu.Pin68=PD11
-Mcu.Pin69=PG5
-Mcu.Pin7=PA13
-Mcu.Pin70=PG4
-Mcu.Pin71=PH7
-Mcu.Pin72=PF14
-Mcu.Pin73=PJ2
-Mcu.Pin74=PF11
-Mcu.Pin75=PE9
-Mcu.Pin76=PE11
-Mcu.Pin77=PE14
-Mcu.Pin78=PH8
-Mcu.Pin79=PJ0
-Mcu.Pin8=PB6
-Mcu.Pin80=PJ1
-Mcu.Pin81=PE7
-Mcu.Pin82=PE10
-Mcu.Pin83=PE12
-Mcu.Pin84=PE15
-Mcu.Pin85=PE13
-Mcu.Pin86=VP_CRC_VS_CRC
-Mcu.Pin87=VP_DMA2D_VS_DMA2D
-Mcu.Pin88=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin89=VP_LIBJPEG_VS_JPEGLIB
-Mcu.Pin9=PG15
-Mcu.Pin90=VP_SYS_VS_tim6
-Mcu.Pin91=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin92=VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.26.0
-Mcu.PinsNb=93
+Mcu.Pin50=PD15
+Mcu.Pin51=PD10
+Mcu.Pin52=PC3
+Mcu.Pin53=PD14
+Mcu.Pin54=PD9
+Mcu.Pin55=PD8
+Mcu.Pin56=PB2
+Mcu.Pin57=PF12
+Mcu.Pin58=PG1
+Mcu.Pin59=PF15
+Mcu.Pin6=PB3
+Mcu.Pin60=PJ4
+Mcu.Pin61=PD12
+Mcu.Pin62=PD13
+Mcu.Pin63=PJ5
+Mcu.Pin64=PA4
+Mcu.Pin65=PF13
+Mcu.Pin66=PG0
+Mcu.Pin67=PJ3
+Mcu.Pin68=PE8
+Mcu.Pin69=PD11
+Mcu.Pin7=PA14
+Mcu.Pin70=PG5
+Mcu.Pin71=PG4
+Mcu.Pin72=PH7
+Mcu.Pin73=PF14
+Mcu.Pin74=PJ2
+Mcu.Pin75=PF11
+Mcu.Pin76=PE9
+Mcu.Pin77=PE11
+Mcu.Pin78=PE14
+Mcu.Pin79=PH8
+Mcu.Pin8=PA13
+Mcu.Pin80=PJ0
+Mcu.Pin81=PJ1
+Mcu.Pin82=PE7
+Mcu.Pin83=PE10
+Mcu.Pin84=PE12
+Mcu.Pin85=PE15
+Mcu.Pin86=PE13
+Mcu.Pin87=VP_CRC_VS_CRC
+Mcu.Pin88=VP_DMA2D_VS_DMA2D
+Mcu.Pin89=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin9=PB6
+Mcu.Pin90=VP_LIBJPEG_VS_JPEGLIB
+Mcu.Pin91=VP_SYS_VS_tim6
+Mcu.Pin92=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin93=VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.26.0
+Mcu.PinsNb=94
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-TOUCHGFX.4.26.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -191,7 +192,7 @@ MxDb.Version=DB.6.0.161
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DMA1_Stream5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA2D_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:true\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.LTDC_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
@@ -208,13 +209,15 @@ NVIC.TIM6_DAC_IRQn=true\:0\:0\:true\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM6_DAC_IRQn
 NVIC.TimeBaseIP=TIM6
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-PA13.Mode=Serial_Wire
+PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=SYS_JTMS-SWDIO
-PA14.Mode=Serial_Wire
+PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
 PA4.Signal=COMP_DAC1_group
 PB2.Mode=Single Bank 1
 PB2.Signal=QUADSPI_CLK
+PB3.Mode=Trace_Asynchronous_SW
+PB3.Signal=SYS_JTDO-SWO
 PB4.GPIOParameters=GPIO_Speed,GPIO_Label
 PB4.GPIO_Label=VSYNC_FREQ
 PB4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -433,7 +436,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_DMA2D_Init-DMA2D-false-HAL-true,6-MX_FMC_Init-FMC-false-HAL-true,7-MX_I2C3_Init-I2C3-false-HAL-true,8-MX_LTDC_Init-LTDC-false-HAL-true,9-MX_QUADSPI_Init-QUADSPI-false-HAL-true,10-MX_LIBJPEG_Init-LIBJPEG-false-HAL-false,11-MX_DAC_Init-DAC-false-HAL-true,12-MX_TIM7_Init-TIM7-false-HAL-true,14-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.26.0-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,15-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.26.0-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_DMA2D_Init-DMA2D-false-HAL-true,6-MX_FMC_Init-FMC-false-HAL-true,7-MX_I2C3_Init-I2C3-false-HAL-true,8-MX_LTDC_Init-LTDC-false-HAL-true,9-MX_QUADSPI_Init-QUADSPI-false-HAL-true,10-MX_LIBJPEG_Init-LIBJPEG-false-HAL-false,11-MX_DAC_Init-DAC-false-HAL-true,12-MX_TIM7_Init-TIM7-false-HAL-true,13-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.26.0-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,14-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.26.0-false-HAL-false
 QUADSPI.ChipSelectHighTime=QSPI_CS_HIGH_TIME_6_CYCLE
 QUADSPI.ClockPrescaler=1
 QUADSPI.FifoThreshold=4
@@ -596,8 +599,9 @@ STMicroelectronics.X-CUBE-TOUCHGFX.4.26.0.tgfx_video_strategy=2
 STMicroelectronics.X-CUBE-TOUCHGFX.4.26.0.tgfx_video_width=480
 STMicroelectronics.X-CUBE-TOUCHGFX.4.26.0.tgfx_vsync=vsync_ltdc
 STMicroelectronics.X-CUBE-TOUCHGFX.4.26.0_SwParameter=ApplicationCcGraphicsJjApplication\:TouchGFXOoGenerator;
-TIM7.IPParameters=TIM_MasterOutputTrigger,Period
-TIM7.Period=108
+TIM7.IPParameters=TIM_MasterOutputTrigger,Period,Prescaler
+TIM7.Period=108-1
+TIM7.Prescaler=1000-1
 TIM7.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
