--- a/STM32F746G_DISCO.ioc
+++ b/STM32F746G_DISCO.ioc
@@ -17,6 +17,8 @@ CORTEX_M7.MPU_Control=MPU_PRIVILEGED_DEFAULT
 CORTEX_M7.PREFETCH_ENABLE=1
 CORTEX_M7.Size-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_REGION_SIZE_256MB
 CORTEX_M7.Size-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_REGION_SIZE_16MB
+DAC.DAC_Trigger=DAC_TRIGGER_NONE
+DAC.IPParameters=DAC_Trigger
 Dma.DAC1.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.DAC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.DAC1.0.Instance=DMA1_Stream5
@@ -436,7 +438,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_DMA2D_Init-DMA2D-false-HAL-true,6-MX_FMC_Init-FMC-false-HAL-true,7-MX_I2C3_Init-I2C3-false-HAL-true,8-MX_LTDC_Init-LTDC-false-HAL-true,9-MX_QUADSPI_Init-QUADSPI-false-HAL-true,10-MX_LIBJPEG_Init-LIBJPEG-false-HAL-false,11-MX_DAC_Init-DAC-false-HAL-true,12-MX_TIM7_Init-TIM7-false-HAL-true,14-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.26.0-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,15-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.26.0-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_DMA2D_Init-DMA2D-false-HAL-true,6-MX_FMC_Init-FMC-false-HAL-true,7-MX_I2C3_Init-I2C3-false-HAL-true,8-MX_LTDC_Init-LTDC-false-HAL-true,9-MX_QUADSPI_Init-QUADSPI-false-HAL-true,10-MX_LIBJPEG_Init-LIBJPEG-false-HAL-false,11-MX_DAC_Init-DAC-false-HAL-true,12-MX_TIM7_Init-TIM7-false-HAL-true,13-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.26.0-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,14-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.26.0-false-HAL-false
 QUADSPI.ChipSelectHighTime=QSPI_CS_HIGH_TIME_6_CYCLE
 QUADSPI.ClockPrescaler=1
 QUADSPI.FifoThreshold=4
@@ -601,7 +603,7 @@ STMicroelectronics.X-CUBE-TOUCHGFX.4.26.0.tgfx_vsync=vsync_ltdc
 STMicroelectronics.X-CUBE-TOUCHGFX.4.26.0_SwParameter=ApplicationCcGraphicsJjApplication\:TouchGFXOoGenerator;
 TIM7.IPParameters=TIM_MasterOutputTrigger,Period,Prescaler
 TIM7.Period=108-1
-TIM7.Prescaler=1000-1
+TIM7.Prescaler=0
 TIM7.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
